# chaos-grid

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  files.rs  gemini.rs  lib.rs  main.rs  pty_manager.rs  storage.rs
src-tauri/src/ai/: analyze.rs  mod.rs  providers.rs  utils.rs
src-tauri/src/commands/: ai_cmds.rs  cell.rs  launch.rs  mod.rs  pty.rs
src/main/: gemini.ts  index.ts  ipc.ts  ptyManager.ts  storage.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts
src/renderer/src/components/: AgentCard.tsx  AgentStatusBar.tsx  AiSettings.tsx  Cell.tsx  CellHeader.tsx  DashboardView.tsx  FileContentModal.tsx  FilesTab.tsx  FilesView.tsx  FlowAnalysisPanel.tsx  GenreSelector.tsx  GitPanel.tsx  Grid.tsx  OutputView.tsx  SessionRestoreDialog.tsx  ShortcutGuide.tsx  StatusOverlay.tsx  SynthesisPanel.tsx  TaskQueue.tsx  TopBar.tsx
src/renderer/src/hooks/: useLocalStorage.ts  usePtyOutput.ts
src/renderer/src/styles/: global.css
src/renderer/src/utils/: files.ts  output-types.ts  status.ts
src/shared/: types.ts
