[package]
name = "chaos-grid"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "chaos_grid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
portable-pty = "0.8"
dotenvy = "0.15"
dirs = "5"
once_cell = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
